--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 .background{
     width:1519.55px;
     height:1725px;
-    background-image:url(../image/index-background.jpeg);
+    background-image:url(./index-background.jpeg);
     background-size:cover;
 }
 
@@ -122,7 +122,7 @@
 .essay-1-background{
     width:800px;
     height:380px;
-    background-image:url(../image/essay-essay-background.jpg);
+    background-image:url(./essay-essay-background.jpg);
     background-size:cover;
     border-radius:18px;
     position:relative;
@@ -198,7 +198,7 @@
 .essay-2-background{
     width:800px;
     height:380px;
-    background-image:url(../image/essay-vscode-background.jpg);
+    background-image:url(./essay-vscode-background.jpg);
     background-size:cover;
     border-radius:18px;
     position:relative;
@@ -276,7 +276,7 @@
 .essay-3-background{
     width:800px;
     height:380px;
-    background-image:url(../image/essay-prog-background.jpg);
+    background-image:url(./essay-prog-background.jpg);
     background-size:cover;
     border-radius:18px;
     position:relative;
@@ -345,4 +345,5 @@
 .essay-3-label:hover{
     transform:scale(1.05);
 }
+
 /* essay3-end */
