--- a/about.css
+++ b/about.css
@@ -6,7 +6,7 @@
 .background{
     width:1519.55px;
     height:1200px;
-    background-image:url(../image/index-background.jpeg);
+    background-image:url(./index-background.jpeg);
     background-size:cover;
     /* position:fixed; */
 }
@@ -233,4 +233,5 @@
     position:absolute;
     top:795px;
     right:443px;
+
 }
