--- a/essay-vscode-index.css
+++ b/essay-vscode-index.css
@@ -6,7 +6,7 @@
 .background{
     width:1519.55px;
     height:768px;
-    background-image:url(../image/index-background.jpeg);
+    background-image:url(./index-background.jpeg);
     background-size:cover;
     position:fixed;
 }
@@ -120,7 +120,7 @@
 .essay-1-background{
     width:800px;
     height:380px;
-    background-image:url(../image/essay-vscode-background.jpg);
+    background-image:url(./essay-vscode-background.jpg);
     background-size:cover;
     border-radius:18px;
     position:relative;
@@ -188,4 +188,5 @@
 
 .essay-1-label:hover{
     transform:scale(1.05);
+
 }
