--- a/html的基础框架.css
+++ b/html的基础框架.css
@@ -6,7 +6,7 @@
 .background{
     width:1519.55px;
     height:2605px;
-    background-image:url(../image/index-background.jpeg);
+    background-image:url(./index-background.jpeg);
     background-size:cover;
 }
 
@@ -366,4 +366,5 @@
 
 .bottom-ul-li-3:hover{
     transform:scale(1.12);
+
 }
