--- a/text.css
+++ b/text.css
@@ -6,7 +6,7 @@
 .background{
     width:1519.55px;
     height:768px;
-    background-image:url(../image/index-background.jpeg);
+    background-image:url(./index-background.jpeg);
     background-size:cover;
     position:fixed;
 }
@@ -248,4 +248,5 @@
     position:absolute;
     top:255px;
     right:635px;
+
 }
