--- a/tory.css
+++ b/tory.css
@@ -6,7 +6,7 @@
 .background{
     width:1519.55px;
     height:875px;
-    background-image:url(../image/index-background.jpeg);
+    background-image:url(./index-background.jpeg);
     /* background-size:cover;
     position:fixed; */
 }
@@ -281,3 +281,4 @@
     top:296px;
     right:1070px;
 }
+
